mumbaihackathon_in/public/css/component.css
/* Header */

*{
	font-family: "raleway" !important;
}

header, footer {
	display: none !important;
}

.container {
	width:100% !important;
}

.lower-container {
	width:80% !important;
	margin: 0 auto;
}

.hero-date {
	font-size: 0.3em;
	letter-spacing: 0.1em;
}

.large-header {
	position: relative;
	width: 100%;
	background: #333;
	overflow: hidden;
	background-size: cover;
	background-position: center center;
	z-index: 1;
}

.start-page .large-header {
	background-color: white;
	background-position: center bottom;
}


.main-title {
	position: absolute;
	margin: 0;
	padding-top: 50px;
	color: #383a3c;
	text-align: center;
	top: 40%;
	left: 50%;
	-webkit-transform: translate3d(-50%,-50%,0);
	transform: translate3d(-50%,-50%,0);
}


.start-page .main-title {
	text-transform: uppercase;
	font-size: 7.00em;
	letter-spacing: 0.2em;
	font-family: "raleway";
}

.ghost-button {
 background-color: Transparent;
 border: 1px solid;
 font-size: 30px;
 padding: 7px 12px;
 margin: 6px 0;
 margin-right: 12px;
 display: inline-block;
 min-width: 120px;
 outline:0;
}

.oss-image {
	width:240px;
	margin-bottom: 50px;
}

.id-image {
	width:280px;
	margin-bottom: 50px;
	margin-top: 80px;
}

.image {
	width:280px;
	margin-bottom: 50px;
	margin-top: 80px;
}

.company-logo{
	width:100px;
	margin-bottom: 50px;
}


.desc-title {
	text-align: center;
	font-size: 2.5em;
	font-weight: 200;
}

.large-description {
	text-align: center;
	font-size: 1.5em;
	font-weight: 100;
	margin-bottom: 100px;
}

.hackathon-information {
	text-align: center;
	font-size: 1.5em;
	font-weight: 100;
	margin-top: 100px;
	margin-bottom: 100px;
}

.host {
	margin-top: 100px;
	margin-bottom: 80px;
}

.form {
	margin-top: 50px;
	margin-bottom: 80px;
}

.confirm-button {
 background-color: Transparent;
 border: 1px solid;
 font-size: 30px;
 padding: 7px 12px;
 margin: 6px 0;
 margin-right: 12px;
 display: inline-block;
 min-width: 120px;
 outline:0;
 margin-top: 50px;
 margin-bottom: 80px;

}

.confirm-button:hover,
.confirm-button:active {
	color: #fff;
	background: black;
}

@media only screen and (max-width : 768px) {
	.start-page .main-title {
		font-size: 3em;
		top:25%;
	}

}

